--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,14 @@ h1 {
     margin-top: 100px;
 }
 
+.photographer_section a {
+  text-decoration: none;
+  color: transparent;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .photographer_section article {
     justify-self: center;
     display: flex;
@@ -42,9 +50,41 @@ h1 {
 .photographer_section article h2 {
     color: #D3573C;
     font-size: 36px;
+    margin: 5px;
+    font-weight: lighter;
+}
+
+.photographer_section article .photographer_infos {
+  justify-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.photographer_section article .photographer_city {
+  color: #901C1C;
+  font-size: 12px;
+  margin: 5px;
+}
+
+.photographer_section article .photographer_tagline {
+  font-size: 10px;
+  font-weight: bold;
+  margin: 5px;
+  color: black;
+}
+
+.photographer_section article .photographer_price {
+  font-size: 8px;
+  opacity: 0.5;
+  margin: 5px;
+  color: black;
 }
 
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
 }
