--- a/css/photographer.css
+++ b/css/photographer.css
@@ -2,6 +2,10 @@
     display: none;
 }
 
+.photo_link {
+  text-decoration: none;
+}
+
 .photograph-header {
     background-color: #FAFAFA;
     height: 300px;
@@ -213,4 +217,88 @@ form textarea {
 
 .strong {
   font-weight: bolder;
+}
+
+#media_modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  background-color: rgba(0, 0, 0, 0.5)
+}
+
+.caroussel_modal {
+  position: absolute;
+  top: 3%;
+  right: 4%;
+  background-color: white;
+  height: 95%;
+  width: 91%;
+}
+
+.caroussel_modal header {
+  position: absolute;
+  right: 1rem;
+  top: 2rem;
+  cursor: pointer;
+}
+
+.slider {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+  margin-left: 3rem;
+}
+
+.slide {
+  width: 1250px;
+  height: 750px;
+  transition: all 0.5s;
+}
+
+.slide img {
+  width: 90%;
+  height: 90%;
+  object-fit: contain;
+}
+
+.slide video {
+  width: 90%;
+  height: 90%;
+  object-fit: cover;
+}
+
+.slide .photo_title {
+  color: #911B1C;
+}
+
+.btn {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border: none;
+  z-index: 10px;
+  cursor: pointer;
+  color:#911B1C;
+  font-size: 18px;
+  background-color: transparent;
+  font-size: 3rem;
+}
+
+.btn:active {
+  transform: scale(1.1);
+}
+
+.btn-prev {
+  top: 45%;
+  left: 2%;
+}
+
+.btn-next {
+  top: 45%;
+  right: 2%;
 }
